--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ before_install:
 
 install:
   - sudo apt-get install -qq libeigen3-dev
-  - mkdir $HOME/testspace
-  - tar -zxvf testspace-linux.tgz -C $HOME/testspace
+  - curl -s https://testspace-client.s3.amazonaws.com/testspace-linux.tgz | sudo tar -zxvf- -C /user/local/bin
 
 before_script:
   - mkdir build
