--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
 
 install:
   - sudo apt-get install -qq libeigen3-dev
+  - sudo apt-get install -qq libboost-all-dev
 
 before_script:
   - mkdir build
